--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -856,6 +856,9 @@ msgstr "Send an email to reading commission when acceptation of evaluation commi
 msgid "september"
 msgstr "September"
 
+msgid "settings_by_education_group"
+msgstr "Settings by education group"
+
 msgid "specific_subject"
 msgstr "Specific subject"
 
