--- a/locale/fr_BE/LC_MESSAGES/django.po
+++ b/locale/fr_BE/LC_MESSAGES/django.po
@@ -856,7 +856,7 @@ msgstr "Envoyer un email à la commission de lecture à l'acceptation de la comm
 msgid "september"
 msgstr "Septembre"
 
-msgid "settings_by_education_group"
+msgid "Settings by education group"
 msgstr "Paramètres par programme"
 
 msgid "specific_subject"
