OD-41 modification erreur de translate

--- a/locale/fr_BE/LC_MESSAGES/django.po
+++ b/locale/fr_BE/LC_MESSAGES/django.po
@@ -427,7 +427,7 @@ msgid "Settings"
 msgstr "Paramètres"
 
 msgid "Settings for"
-msgstr ""
+msgstr "Paramètres pour"
 
 #: templates/dissertations.html:128
 msgid "Settings of the Dissertation application"
