OD-41 correction de la pr

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -1975,10 +1975,10 @@ msgstr ""
 msgid "Manager deleted jury"
 msgstr ""
 
-msgid "modify selected programs"
+msgid "Modify selected programs"
 msgstr ""
 
-msgid "multiple modification"
+msgid "Multiple modification"
 msgstr ""
 
 #: views/dissertation.py:923
